<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.juan.inclass08.EditFrag">

    <!-- TODO: Update blank fragment layout -->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAddTItle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_add_title"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAddExpenseNameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_add_expense_name_title"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etAddExpenseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvAddCategoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_add_category"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerAddCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvAddAmountTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_add_amount_title"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etAddExpenseAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_save"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btnAddCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_add_cancel"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
